[b]Version 0.6.0rc3[/b] (not released yet):

(2008-03-14)
 * Now a dialog appears too if mplayer fails to start or crashes.

(2008-03-13)
 * Added a new dialog to report the mplayer errors.

(2008-03-11)
 * Displays a warning dialog if mplayer exits with an exit code 
   different to 0. 

(2008-03-10)
 * (Internal change) Use -monitorpixelaspect instead of -monitoraspect.

(2008-03-08)
 * Use -colorkey for directx only.

(2008-03-06)
 * Added more help for the subtitle, interface and advanced sections in 
   preferences.

(2008-03-05)
 * Ignore action restore/hide if system tray icon is not visible. Fixes
   bug #1908229.
 * Added option in config.h to disable the use of the colorkey.

(2008-03-03)
 * Now the shortcut editor should recognize some of the multimedia keys.
 * (By user request) Added an action to reset the video equalizer.
 * Remove starting and ending whitespaces in mp3 tags. Patch by 
   Tanguy Krotoff <tkrotoff@gmail.com>

(2008-03-02)
 * Bugfix: the keys PgDown and PgUp were incorrectly identified as PageDown
   and PageUp by shortcutgetter.

(2008-03-01)
 * Try to keep fullscreen mode if running mplayer in its own window when
   opening a new file.
 * Added flac to the list of audio extensions. Patch by 
   Tanguy Krotoff <tkrotoff@gmail.com>
 * Now changing the application stylesheet can be disabled setting
   ALLOW_CHANGE_STYLESHEET to 0 in config.h

(2008-02-29)
 * Added the Macedonian translation by Marko Doda <mark0d0da@gmail.com>
 * Added the Basque translation by Piarres Beobide <pi@beobide.net>

(2008-02-26)
 * Add the hue filter if the software equalizer is enabled. This allows to
   change the hue in the video equalizer.
 * Allow the software equalizer to be used with gl/gl2. Note: it won't work
   with gl or gl2 but it will work with gl:yuv=3 and gl2:yuv=3.

(2008-02-25)
 * Bugfix: mark the right current item in the playlist if deleted an item
   above it. Patch by corentin1234.

(2008-02-23)